phishing-directory/network-policy/policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}  
  policyTypes:
    - Ingress
    - Egress
