phishing-directory/network-policy/policy-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-ingress-policy
spec:
  podSelector:
    matchLabels:
       app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: frontend

      - namespaceSelector: 
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 5000
